# genie-cmake

./: CMakeLists.txt  CMakePresets.json  README.org
